--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -20,6 +20,7 @@ dependencies {
 	compile("javax.servlet:jstl")
 	compile("org.jasypt:jasypt-spring31:1.9.0")
 	compile('org.jongo:jongo:1.2')
+	compile('org.springframework.security:spring-security-taglibs:3.2.7.RELEASE')
 	
 	
 	    
