history 메뉴의 테이블에 대한 레코드 처리 및 페이저 기능 추가. 에러 발생에 대한 처리를 담당하는 전용 jsp 추가.

--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -6,6 +6,9 @@ spring:
 
 server.port: 80
 
+spring.dao.exceptiontranslation.enabled: false
+
+
 logging.level: 
     io.recruit: INFO
     org.springframework: INFO
@@ -18,4 +21,6 @@ logging.config: classpath:config/logback.xml
 ---
 spring.profiles: real
 
-logging.config: file:d:/config/logback3.xml            
+logging.config: file:d:/config/logback3.xml
+
+            
