--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -42,5 +42,6 @@ dependencies {
 	testCompile('org.spockframework:spock-core:1.0-groovy-2.4')
 	testCompile('org.spockframework:spock-spring:1.0-groovy-2.4')
 	testCompile('commons-fileupload:commons-fileupload:1.3.1')
+	testCompile 'de.flapdoodle.embed:de.flapdoodle.embed.mongo:1.48.0'
 }
 
