--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -1,26 +1,4 @@
-spring:
-    profiles.active: default,dev
-    view:
-        prefix: /WEB-INF/views/
-        suffix: .jsp
+#debug: true
 
-server.port: 80
+spring.profiles.active: dev
 
-spring.dao.exceptiontranslation.enabled: false
-
-
-logging.level: 
-    io.recruit: INFO
-    org.springframework: INFO
-    org.apache.tomcat.util.net.NioSelectorPool: INFO
----
-spring.profiles: dev
-
-logging.config: classpath:config/logback.xml
-    
----
-spring.profiles: real
-
-logging.config: file:d:/config/logback3.xml
-
-            
