--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -4,44 +4,39 @@ dependencies {
 	// ___compile___
 
 	// spring boot
-    compile("org.springframework.boot:spring-boot-starter-web")
-    compile("org.springframework.boot:spring-boot-starter-security")
-    compile("org.springframework.boot:spring-boot-starter-data-mongodb")
-    compile("org.springframework.boot:spring-boot-starter-amqp")
-    
-    // apache commons
-    compile('org.apache.commons:commons-lang3:3.3.2')
-	compile('commons-codec:commons-codec:1.10')
-    compile('commons-io:commons-io:2.4')
+    compile 'org.springframework.boot:spring-boot-starter-web'
+    compile 'org.springframework.boot:spring-boot-starter-security'
+    compile 'org.springframework.boot:spring-boot-starter-data-mongodb'
+    compile 'org.springframework.boot:spring-boot-starter-amqp'
     
     // etc
-	compile('com.epapyrus.gateway:sdp-commons:7.3.5.1')    
-    compile('joda-time:joda-time:2.6')
-    compile('com.google.guava:guava:18.0')
-	compile("javax.servlet:jstl")
-	compile("org.jasypt:jasypt-spring31:1.9.0")
-	compile('org.jongo:jongo:1.2')
-	compile('org.springframework.security:spring-security-taglibs:3.2.7.RELEASE')
+	compile 'io.manasobi:manasobi-utils:1.0.1'    
+    compile 'joda-time:joda-time:2.6'
+    compile 'com.google.guava:guava:18.0'
+	compile 'javax.servlet:jstl'
+	compile 'org.jasypt:jasypt-spring31:1.9.0'
+	compile 'org.jongo:jongo:1.2'
+	compile 'org.springframework.security:spring-security-taglibs:3.2.7.RELEASE'
 	
 	
 	    
     // ___providedCompile___
 	
 	providedCompile 'org.springframework.boot:spring-boot-starter-tomcat'
-	providedCompile("org.apache.tomcat.embed:tomcat-embed-jasper")
+	providedCompile 'org.apache.tomcat.embed:tomcat-embed-jasper'
 
 	    
     // ___testCompile___
     
     // spring framework
-    testCompile('org.springframework.boot:spring-boot-starter-test')
-    testCompile('org.dbunit:dbunit:2.4.9')
-    testCompile('org.hamcrest:hamcrest-all:1.3')
-    testCompile('com.jayway.jsonpath:json-path:1.2.0')
-	testCompile('org.codehaus.groovy:groovy-all:2.4.1')
-	testCompile('org.spockframework:spock-core:1.0-groovy-2.4')
-	testCompile('org.spockframework:spock-spring:1.0-groovy-2.4')
-	testCompile('commons-fileupload:commons-fileupload:1.3.1')
+    testCompile 'org.springframework.boot:spring-boot-starter-test'
+    testCompile 'org.dbunit:dbunit:2.4.9'
+    testCompile 'org.hamcrest:hamcrest-all:1.3'
+    testCompile 'com.jayway.jsonpath:json-path:1.2.0'
+	testCompile 'org.codehaus.groovy:groovy-all:2.4.1'
+	testCompile 'org.spockframework:spock-core:1.0-groovy-2.4'
+	testCompile 'org.spockframework:spock-spring:1.0-groovy-2.4'
+	testCompile 'commons-fileupload:commons-fileupload:1.3.1'
 	testCompile 'de.flapdoodle.embed:de.flapdoodle.embed.mongo:1.48.0'
 }
 
