--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -38,5 +38,6 @@ dependencies {
 	testCompile 'org.spockframework:spock-spring:1.0-groovy-2.4'
 	testCompile 'commons-fileupload:commons-fileupload:1.3.1'
 	testCompile 'de.flapdoodle.embed:de.flapdoodle.embed.mongo:1.48.0'
+	testCompile 'cglib:cglib-nodep:2.2.2'
 }
 
